Links to other pages

--- a/index.html
+++ b/index.html
@@ -3,5 +3,9 @@
 <body>
 <h1>Welcome</h1>
 <p>I'm hosted with GitHub Pages.</p>
+
+<p><a href="mypage.html">My Page</a></p>
+<p><a href="mypage_bootstrap.HTML">My Page with Bootstrap classes</a></p>
+<p><a href="form.html">My Form Page</a></p>
 </body>
 </html>
