--- a/mypage_bootstrap.HTML
+++ b/mypage_bootstrap.HTML
@@ -1,3 +1,4 @@
+Charles Bourland
 <!DOCTYPE html>
     <html>
 
@@ -83,7 +84,7 @@
 </div>
 
 
-  
+
   <!-- Trigger the modal with a button -->
   <button type="button" class="btn btn-info btn-lg" data-toggle="modal" data-target="#myModal">Click Me</button>
 
