--- a/index.html
+++ b/index.html
@@ -8,5 +8,6 @@ Charles Bourland
 <p><a href="mypage.html">My Page</a></p>
 <p><a href="mypage_bootstrap.HTML">My Page with Bootstrap classes</a></p>
 <p><a href="form.html">My Form Page</a></p>
+<p><a href="tic-tac-toe.html"> Tic-Tac-Toe Game </a></p>
 </body>
 </html>
